--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         </div>
         <div class="canvas"></div>
     </div>
-    <div class="footer">Muhammed Shajahan</div>
+    <div class="footer">by Muhammed Shajahan</div>
 </body>
 </html>
